# faultline

./: .agents.yaml  .agents.yaml.example  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LEGAL.md  LICENSE-MIT  README.md  deny.toml  docker-compose.yml  package-lock.json  package.json  playwright.config.js
.github/actions/agent-iteration-check/: action.yml
.github/actions/claude-review/: action.yml
.github/actions/openrouter-review/: action.yml
.github/workflows/: main-ci.yml  pr-validation.yml
crates/faultline-backend-wasm/: Cargo.toml
crates/faultline-backend-wasm/src/: lib.rs
crates/faultline-cli/: Cargo.toml
crates/faultline-cli/src/: lib.rs  main.rs
crates/faultline-engine/: Cargo.toml
crates/faultline-engine/src/: ai.rs  ai_tests.rs  belief.rs  campaign.rs  combat.rs  diplomacy.rs  engine.rs  error.rs  fracture.rs  lib.rs  network.rs  state.rs  supply.rs  tick.rs  tick_tests.rs  utility.rs
crates/faultline-engine/tests/: audit_unread_params.rs  belief_asymmetry.rs  diplomacy_behavior.rs  epic_d_alliance_fracture.rs  integration.rs  multifront_overflow.rs  narrative_and_displacement.rs  property_invariants.rs  scenario_library.rs  supply_interdiction.rs  utility_adaptive_ai.rs
crates/faultline-events/: Cargo.toml
crates/faultline-events/src/: lib.rs
crates/faultline-geo/: Cargo.toml
crates/faultline-geo/src/: lib.rs
crates/faultline-politics/: Cargo.toml
crates/faultline-politics/src/: lib.rs
crates/faultline-stats/: Cargo.toml
crates/faultline-stats/src/: alliance_dynamics.rs  analysis.rs  belief.rs  calibration.rs  civilian_activations.rs  coevolve.rs  counterfactual.rs  delta.rs  displacement.rs  explain.rs  lib.rs  manifest.rs  markdown.rs  morris.rs  narrative_dynamics.rs  network_metrics.rs  report.rs  robustness.rs  search.rs  sensitivity.rs  time_dynamics.rs  uncertainty.rs  utility_decomposition.rs
crates/faultline-stats/src/report/: alliance_dynamics.rs  belief_asymmetry.rs  calibration.rs  civilian_activations.rs  coevolve.rs  comparison.rs  continuous_metrics.rs  correlation.rs  countermeasure.rs  defender_capacity.rs  displacement.rs  environment_schedule.rs  feasibility.rs  header.rs  leadership_disruption.rs  low_confidence.rs  methodology.rs  mod.rs  narrative_dynamics.rs  network_resilience.rs  pareto_frontier.rs  phase_breakdown.rs  policy_implications.rs  regional_control.rs  robustness.rs  seam_analysis.rs  search.rs  supply_pressure.rs  tech_costs.rs  test_support.rs  time_dynamics.rs  util.rs  utility_decomposition.rs  win_rates.rs
crates/faultline-stats/tests/: epic_c_validation.rs  epic_h_coevolution.rs  epic_h_search.rs  epic_i_defender_posture.rs  epic_i_robustness.rs  epic_k_validation.rs  epic_l_networks.rs  explain_integration.rs  property_network_metrics.rs  property_search.rs  property_uncertainty.rs  report_integration.rs
crates/faultline-tech/: Cargo.toml
crates/faultline-tech/src/: lib.rs
crates/faultline-types/: Cargo.toml
crates/faultline-types/src/: belief.rs  campaign.rs  error.rs  events.rs  faction.rs  ids.rs  lib.rs  map.rs  migration.rs  network.rs  politics.rs  scenario.rs  simulation.rs  stats.rs  strategy.rs  strategy_space.rs  tech.rs  tests.rs  victory.rs
crates/faultline-types/tests/: migration_integration.rs
docker/: rust-ci.Dockerfile
docs/: ROADMAP.md  improvement-plan.md  scenario_schema.md
scenarios/: adaptive_utility_demo.toml  alert_fatigue_soc.toml  calibration_demo.toml  capabilities_demo.toml  coalition_fracture_demo.toml  coevolution_demo.toml  compound_kill_chains.toml  defender_posture_optimization.toml  defender_robustness_demo.toml  drone_swarm_destabilization.toml  europe_eastern_flank.toml  europe_energy_sabotage.toml  false_flag_demo.toml  multifront_soc_escalation.toml  narrative_competition_demo.toml  network_resilience_demo.toml  persistent_covert_surveillance.toml  strategy_search_demo.toml  supply_interdiction_demo.toml  tutorial_asymmetric.toml  tutorial_symmetric.toml  us_institutional_fracture.toml
site/: app.html  architecture.html  docs.html  index.html
site/css/: app.css  styles.css
site/js/: main.js
site/js/app/: comparison.js  dashboard.js  diff.js  editor.js  event-bus.js  faction-builder.js  generated-regions.js  heatmap-data.js  main.js  map-library.js  map-renderer.js  mc-worker.js  pinned.js  presets.js  sharing.js  sim-controls.js  state.js  tech-cards.js  tech-library.js  tutorial.js  us-regions-geo.js  wasm-util.js
site/scenarios/: compound_kill_chains.toml  drone_swarm_destabilization.toml  etra_01_drone_decapitation.toml  europe_eastern_flank.toml  europe_energy_sabotage.toml  persistent_covert_surveillance.toml  tutorial_symmetric.toml  us_institutional_fracture.toml
tests/browser/: app.spec.js  debug.spec.js  phase5.spec.js  polish-features.spec.js
tests/integration/: comparison.test.mjs  diff.test.mjs  grep-guard.test.mjs  heatmap-data.test.mjs  pinned.test.mjs  sharing.test.mjs  site-scenarios-symlink.test.mjs
tools/build-maps/: README.md  build.mjs
tools/ci/: grep-guard.sh  verify-bundled-scenarios.sh  verify-migration.sh  verify-robustness-pipeline.sh
tools/cli/agents/: run_codex.sh
tools/cli/containers/: README.md  run_codex_container.sh  run_opencode_container.sh
