[workspace]
resolver = "2"
members = [
    "crates/faultline-types",
    "crates/faultline-engine",
    "crates/faultline-geo",
    "crates/faultline-tech",
    "crates/faultline-politics",
    "crates/faultline-events",
    "crates/faultline-stats",
    "crates/faultline-backend-wasm",
    "crates/faultline-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndrewAltimit/faultline"
authors = ["AndrewAltimit"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Math
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
statrs = "0.17"
nalgebra = "0.32"

# WASM
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

# Hashing
rustc-hash = "2.1"

# Parallelism (CLI only, not WASM)
rayon = "1.10"

# Geo
geo = "0.28"
geojson = "0.24"

# Internal crates
faultline-types = { path = "crates/faultline-types" }
faultline-engine = { path = "crates/faultline-engine" }
faultline-geo = { path = "crates/faultline-geo" }
faultline-tech = { path = "crates/faultline-tech" }
faultline-politics = { path = "crates/faultline-politics" }
faultline-events = { path = "crates/faultline-events" }
faultline-stats = { path = "crates/faultline-stats" }
faultline-backend-wasm = { path = "crates/faultline-backend-wasm" }
faultline-cli = { path = "crates/faultline-cli" }

[workspace.lints.clippy]
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "deny"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
