[package]
name = "faultline-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Headless CLI for batch Monte Carlo simulation with Faultline"

[[bin]]
name = "faultline"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
faultline-types = { workspace = true }
faultline-engine = { workspace = true }
faultline-stats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
toml = { workspace = true }
