[package]
name = "faultline-geo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Geography, maps, and terrain for Faultline simulation"

[lints]
workspace = true

[dependencies]
faultline-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
