[package]
name = "faultline-stats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Monte Carlo runner and statistical output for Faultline simulation"

[lints]
workspace = true

[dependencies]
faultline-types = { workspace = true }
faultline-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
statrs = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
toml = { workspace = true }
