[package]
name = "faultline-tech"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Technology capability card system for Faultline simulation"

[lints]
workspace = true

[dependencies]
faultline-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
