[package]
name = "faultline-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared data structures for the Faultline conflict simulation engine"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
